--- a/idol_gallery/idol_detail/ranko_k.html
+++ b/idol_gallery/idol_detail/ranko_k.html
@@ -938,19 +938,19 @@ kg
                     },
                     "comments": {
                         "comment": "きゃぁっ! み､見ないでっ…!! ……うぅ､恥ずかしい｡……………ｸ､ｸｸｸ｡こ､この私の心結界を破るとはｱﾅﾀの力もなかなかのようね……ﾌﾌ､ﾊﾊﾊﾊ!(訳:絵見られちゃったかなぁ､どうしよう～)",
-                        "comments_my_1": "煩わしい太陽ね(おはよう!)",
-                        "comments_my_2": "さぁ狩りの時間よ(仕事いこ？)",
-                        "comments_my_3": "ｸｸｸ､夜の始まりね(頑張ろ～♪)",
-                        "comments_my_4": "我が下僕OOよ､戯れに付き合ってやろう(LIVEしよ?)",
-                        "comments_my_max": "OOﾌﾟﾛ…ﾃﾞｭｰｻｰ…｡あの……私の絵…見た?",
-                        "comments_work_1": "闇に飲まれよ!(お疲れ様です!)",
-                        "comments_work_2": "今こそ創世の時(よろしく♪)",
-                        "comments_work_3": "ｸｸ､造作もない(頑張らなきゃ!)",
-                        "comments_work_4": "我が下僕OO｡旅立ちの準備をしなさい(早く次いこ?)",
-                        "comments_work_max": "OOﾌﾟﾛ…ﾃﾞｭｰｻｰ…｡お､お疲れ様です",
-                        "comments_work_love_up": "OOﾌﾟ…ﾌﾟﾛ…ﾌﾟﾛﾃｲﾝ飲む?(素直になれない…orz)",
-                        "comments_live": "恐怖の意味を知りなさい!",
-                        "comments_love_max": "OOﾌﾟﾛ…ﾃﾞｭｰｻｰ｡今度…あ､あなたの絵を描かせて…もらえませんか…?"
+                        "comments_my_1": "성가신 태양이네 (안녕!)",
+                        "comments_my_2": "자아 사냥의 시간이다 (일하러 가자?)",
+                        "comments_my_3": "크크크, 밤의 시작이군 (힘내～♪)",
+                        "comments_my_4": "나의 하인 OO여, 장난에 어울려주도록 하지 (LIVE 하자?)",
+                        "comments_my_max": "OO프로듀서… 저기…… 내 그림… 봤어?",
+                        "comments_work_1": "어둠에 삼켜져라! (수고하셨습니다!)",
+                        "comments_work_2": "지금이야말로 창세의 때 (잘 부탁해♪)",
+                        "comments_work_3": "크크, 대수롭지도 않다 (열심히 해야겠다!)",
+                        "comments_work_4": "나의 하인 OO. 여행할 준비를 하세요 (어서 다음 가자?)",
+                        "comments_work_max": "OO프로듀서… 수, 수고하셨습니다",
+                        "comments_work_love_up": "OO프…프로…프로틴 마실래? (솔직해질 수가 없네… orz)",
+                        "comments_live": "공포의 의미를 알라!",
+                        "comments_love_max": "OO프로듀서. 이 다음에…다, 당신의 그림을 그리게…해주실래요…?"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2401101/idolcomment.mp3",
@@ -1016,20 +1016,20 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "ﾊﾊﾊﾊﾊ!! 人に生まれし者どもよ､慄き､そして平伏せ!!! 我が覇道の為に贄となるのだ!!! ﾊｰｯﾊｯﾊｯﾊ!!! (訳:うわ～! こんな衣装着られるなんて夢みたい!! ありがとうっ! 超嬉しいです♪)",
-                        "comments_my_1": "煩わしい太陽ね(おはよう!)",
-                        "comments_my_2": "さぁ狩りの時間よ(仕事いこ？)",
-                        "comments_my_3": "我が真の力を見よ!(超やる気!)",
-                        "comments_my_4": "我が友OOよ､我に力を捧げよ(ﾚｯｽﾝお願いします♪)",
-                        "comments_my_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ｡……す､素敵な衣装ありがとう",
-                        "comments_work_1": "闇に飲まれよ!(お疲れ様です!)",
-                        "comments_work_2": "今こそ創世の時(よろしく♪)",
-                        "comments_work_3": "出でよ!ｲﾌﾘｰﾄ!!(見て見て～♪)",
-                        "comments_work_4": "我が友OO､さぁ終焉を始めましょう(ﾄｯﾌﾟめざそｰ!)",
-                        "comments_work_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ｡い､いつもありがとう",
-                        "comments_work_love_up": "何かしら､OOﾌﾟﾛﾃﾞｭｰｻｰ(…か､感じ悪かったかなぁ?)",
-                        "comments_live": "ｸｸｸ､闇の力に慄きなさい!",
-                        "comments_love_max": "あの､OOﾌﾟﾛﾃﾞｭｰｻｰ｡私､今よりもっと頑張って…あ､あなたのことを助けられるくらいのｱｲﾄﾞﾙになるから…!"
+                        "comment": "하하하하하!! 사람으로 태어난 자들이여, 전율하라, 그리고 부복하라!!! 나의 패도를 위해 제물이 되는 것이다!!! 하-앗핫핫핫!!! (역 : 우와～! 이런 의상 입을 수 있다니 꿈만 같아!! 고마워요! 완전 기뻐요♪)",
+                        "comments_my_1": "성가신 태양이네 (안녕!)",
+                        "comments_my_2": "자아 사냥의 시간이다 (일하러 가자?)",
+                        "comments_my_3": "내 진정한 힘을 보라! (의욕 만만!)",
+                        "comments_my_4": "나의 벗 OO여, 내게 힘을 바쳐라 (레슨 부탁해요♪)",
+                        "comments_my_max": "OO프로듀서……  머, 멋진 의상 고마워",
+                        "comments_work_1": "어둠에 삼켜져라! (수고하셨습니다!)",
+                        "comments_work_2": "지금이야말로 창세의 때 (잘 부탁해♪)",
+                        "comments_work_3": "나와라! 이프-리트!! (봐줘 봐줘～♪)",
+                        "comments_work_4": "나의 벗 OO, 자아종언을 시작하자 (TOP를 노리자-!)",
+                        "comments_work_max": "OO프로듀서. 어, 언제나 고마워",
+                        "comments_work_love_up": "무슨 일이지, OO 프로듀서 (…기, 기분 나빴던 걸까?)",
+                        "comments_live": "크크크, 어둠의 힘에 전율하라!",
+                        "comments_love_max": "저기, OO프로듀서. 나, 지금보다 더 노력해서… 다, 당신을 도울 수 있을 정도의 아이돌이 될테니까…!"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2501102/idolcomment.mp3",
@@ -1095,20 +1095,20 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "地獄の釜が開き､我がまといし漆黒の衣は灼熱の業火に包まれる! 嗚呼､清浄なる蒼が我を誘う! (訳:た､太陽が眩しい……暑くて倒れそう……海に入ったら涼しいかな?)",
-                        "comments_my_1": "蒼の境界を越えん!(海行こｰ!)",
-                        "comments_my_2": "ｸｸｸ､魂が猛るわ(頑張ります♪)",
-                        "comments_my_3": "わ､煩わしい…太陽…(暑い…)",
-                        "comments_my_4": "我が下僕OOよ､禁断の氷塊を求めん!(ｱｲｽが欲しい!)",
-                        "comments_my_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ､こ､黒衣は…此処では封印するわ",
-                        "comments_work_1": "闇に飲まれよ!(お疲れ様です!)",
-                        "comments_work_2": "我が声に溺れよ!(楽しんでね!)",
-                        "comments_work_3": "生命の雫が!!(汗かいちゃった)",
-                        "comments_work_4": "我が下僕OOよ､生命の起源を!(お水が欲しいな!)",
-                        "comments_work_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ､こ､この炎天下だから…気をつけて",
-                        "comments_work_love_up": "OOﾌﾟ…ﾌﾟﾛ…ﾌﾟﾛﾚﾀﾘｱ文学（素直になれない…orz）",
-                        "comments_live": "貴方も灼熱を感じなさい!",
-                        "comments_love_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ…夏の…砂浜は想像以上でした…｡その…私､初めて海にきたから…でも､いい思い出になりました!"
+                        "comment": "지옥의 가마가 열리고, 내가 걸치고 있는 지옥의 의복은 작열의 업화에 휩싸인다! 아아 청정한 푸름이 나를 부른다! (역 : 태, 태양이 눈 부셔…… 더워서 쓰러질 것 같아…… 바다에 들어가면 시원할까?)",
+                        "comments_my_1": "청색의 경계를 넘으리라! (바다 가자-!)",
+                        "comments_my_2": "크크크, 영혼이 날뛴다 (열심히 할게요♪)",
+                        "comments_my_3": "성, 성가신… 태양… (더워…)",
+                        "comments_my_4": "나의 하인 OO여, 금단의 빙괴를 원한다! (아이스크림 먹고 싶어!)",
+                        "comments_my_max": "OO프로듀서, 흐, 흑의는… 여기서는 봉인하겠어",
+                        "comments_work_1": "어둠에 삼켜져라! (수고하셨습니다!)",
+                        "comments_work_2": "나의 소리에 빠져라! (즐겨줘!)",
+                        "comments_work_3": "생명의 물방울이!! (땀나 버렸다)",
+                        "comments_work_4": "나의 하인 OO여, 생명의 기원을! (물이 필요해!)",
+                        "comments_work_max": "OO프로듀서, 이, 이런 더위니까… 조심해",
+                        "comments_work_love_up": "OO프… 프로… 프로레타리아문자 (솔직해질 수가 없어…orz)",
+                        "comments_live": "당신도 작열을 느끼세요!",
+                        "comments_love_max": "OO프로듀서…여름의… 모래사장은 상상이상이었어요… 그… 저, 처음으로 바다에 왔으니까… 그래도, 좋은 추억이 됐습니다!"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2402601/idolcomment.mp3",
@@ -1174,20 +1174,20 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "ﾌﾊﾊﾊﾊﾊ!! 闇の帳が降りし刻こそ我が真の力が発揮される時! 白き衣に包まれ聖なる翼が風に舞わん! ﾌﾊﾊﾊﾊﾊﾊ!! (訳:夜は涼しくて最高! 風も吹いてて気持ちいいLIVEができそう!)",
-                        "comments_my_1": "蒼の境界を越えん!(海行こｰ!)",
-                        "comments_my_2": "ｸｸｸ､魂が猛るわ(頑張ります♪)",
-                        "comments_my_3": "凍てつく波動よ!(ｸｰﾗｰ最高!)",
-                        "comments_my_4": "我が友OO｡聖なる裁きを与えん!(早くLIVEしたい!)",
-                        "comments_my_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ､その､あ､新しい衣装…すごく素敵……",
-                        "comments_work_1": "闇に飲まれよ!(お疲れ様です!)",
-                        "comments_work_2": "我が声に溺れよ!(楽しんでね!)",
-                        "comments_work_3": "放たれしｼｳﾞｧよ!(ｸｰﾗｰ最高!)",
-                        "comments_work_4": "我が友OOよ｡其方との協奏曲を!(一緒に頑張ろ?)",
-                        "comments_work_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ､わ､私の手をとってくれる?",
-                        "comments_work_love_up": "OOﾌﾟﾛﾃﾞｭｰｻｰ…い､いつもありがとう(い､言えた…)",
-                        "comments_live": "白き翼に踊れ!",
-                        "comments_love_max": "あ､あの…OOﾌﾟﾛﾃﾞｭｰｻｰ､私いつも困らせているかもしれないけど…一緒にいられて嬉しい…これからも頑張ります!"
+                        "comment": "후하하하하하!! 어둠의 장막이 내리는 때야말로 나의 진정한 힘이 발휘될 때! 새하얀 의복에 휩싸여 거룩한 날개가 바람에 흩린다! 후하하하하하하!! (역 : 밤은 시원해서 최고! 바람도 불어서 기분좋은 LIVE가 될 것 같아!)",
+                        "comments_my_1": "청색의 경계를 넘으리라! (바다 가자-!)",
+                        "comments_my_2": "크크크, 영혼이 날뛴다 (열심히 할게요♪)",
+                        "comments_my_3": "얼어붙는 파동이여! (쿨러 최고!)",
+                        "comments_my_4": "나의 벗 OO. 성스러운 심판을 내리리라! (빨리 LIVE하고 싶어!)",
+                        "comments_my_max": "OO프로듀서, 저기, 새, 새로운 의상… 굉장히 멋있어……",
+                        "comments_work_1": "어둠에 삼켜져라! (수고하셨습니다!)",
+                        "comments_work_2": "나의 소리에 빠져라! (즐겨줘!)",
+                        "comments_work_3": "해방된 시바여! (쿨러 최고!)",
+                        "comments_work_4": "나의 벗 OO여. 그대와의 협주곡을! (같이 힘내자?)",
+                        "comments_work_max": "OO프로듀서, 나, 나의 손을 잡아줄래?",
+                        "comments_work_love_up": "OO프로듀서…어, 언제나 고마워(마, 말했다…)",
+                        "comments_live": "하얀 날개에 춤춰라!",
+                        "comments_love_max": "저, 저기… OO프로듀서, 나 언제나 곤란하게 하고 있을지도 모르지만… 함께 있어서 기뻐… 앞으로도 열심히 할게요!"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2502602/idolcomment.mp3",
