--- a/idol_gallery/idol_detail/ranko_k.html
+++ b/idol_gallery/idol_detail/ranko_k.html
@@ -1253,20 +1253,20 @@ kg
                         "card_cv": null
                     },
                     "comments": {
-                        "comment": "白き円環を頭に抱き､堕天した私が地獄の釜を開いてやろう! 愚民どもよ､ひれ伏せ! その魂の鼓動を我に捧げよ! (訳:ついに私もCDﾃﾞﾋﾞｭｰできました! みんなに聞いてもらいたいな♪)",
-                        "comments_my_1": "禁忌に触れるな!（内緒です!）",
-                        "comments_my_2": "何かしら? （ご用ですか? ）",
-                        "comments_my_3": "白き下僕よ!(連れて帰りたい!)",
-                        "comments_my_4": "嗚呼! 魂が燃える音がするわ! (素敵な楽曲で嬉しいです!)",
-                        "comments_my_max": "OOﾌﾟ…ﾌﾟﾛﾃﾞｭｰｻｰ､私の事､分かってくれて､嬉しい…",
-                        "comments_work_1": "闇に飲まれよ!(お疲れ様です!)",
-                        "comments_work_2": "深淵を呼ぶ声!(声援嬉しい!)",
-                        "comments_work_3": "魂の猛るさまを!(頑張ろう!)",
-                        "comments_work_4": "世界に漂う音の波を集めよ!(ﾌｧﾝの歓声が聞こえる!)",
-                        "comments_work_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ……私､これからも頑張るから…!",
-                        "comments_work_love_up": "OOﾌﾟ…ﾌﾟﾛﾌｨｰﾙ教えて(あ､間違えて聞いちゃった!)",
-                        "comments_live": "我が魂の声を聞かん!",
-                        "comments_love_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ…あの…私のこと､大事にしてくれて…嬉しいです! CD､本当に嬉しかったから…あ､ありがとう"
+                        "comment": "백색의 원환을 머리에 품고, 타천한 내가 지옥의 솥을 열어 주겠다! 우민들이여, 엎드려라! 그 영혼의 고동을 나에게 바쳐라!(드디어 저도 CD데뷔를 하게 됐습니다! 모두들 들어주면 좋겠다♪)",
+                        "comments_my_1": "금기를 건드리지 마라! (비밀이에요!)",
+                        "comments_my_2": "무슨 일이지? (용무가 있으신가요?)",
+                        "comments_my_3": "백색의 하인이여! (데리고 돌아가고 싶다!)",
+                        "comments_my_4": "아아! 영혼이 타오르는 소리가 들리는구나! (멋진 곡이라 기뻐요!)",
+                        "comments_my_max": "OO 프... 프로듀서, 나를, 이해해 줘서, 기뻐...",
+                        "comments_work_1": "어둠에 삼켜져라! (수고하셨습니다!)",
+                        "comments_work_2": "심연을 부르는 소리! (성원 기뻐!)",
+                        "comments_work_3": "영혼이 날뛰는 모습을! (힘내자!)",
+                        "comments_work_4": "세계에 표류하는 소리의 파도를 모아라! (팬들의 환성이 들려!)",
+                        "comments_work_max": "OO 프로듀서…… 나, 앞으로도 열심히 할테니까…!",
+                        "comments_work_love_up": "OO 프... 프로필 알려주세요(아, 묻는거 실수해버렸다! )",
+                        "comments_live": "내 영혼의 소리를 들으라!",
+                        "comments_love_max": "OO 프로듀서... 저... 나를, 소중하게 여겨 줘서... 기뻐요! CD, 정말 기뻤으니까...고, 고마워"
                     },
                     "voice": {
                         "comment": null,
@@ -1332,20 +1332,20 @@ kg
                         "card_cv": null
                     },
                     "comments": {
-                        "comment": "私の才能を見ぬいた｢瞳｣持つ者よ! その魔力を闇の器に注ぎ､大いなる暗黒の力を一つにせよ! ﾌﾌﾌ､ﾌﾊﾊﾊﾊﾊ! (訳:ﾌﾟﾛﾃﾞｭｰｻｰのお陰で私も成長できました! とっても嬉しいです!)",
-                        "comments_my_1": "禁忌に触れるな!（内緒です!）",
-                        "comments_my_2": "何かしら? （ご用ですか? ）",
-                        "comments_my_3": "我が半身達よ!(衣装がお揃い!)",
-                        "comments_my_4": "我が友OO｡魂の休息を!(あんまり無理しないでね?)",
-                        "comments_my_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ……今後も､あの､お世話になります!",
-                        "comments_work_1": "闇に飲まれよ!(お疲れ様です!)",
-                        "comments_work_2": "深淵を呼ぶ声!(声援嬉しい!)",
-                        "comments_work_3": "ｸﾞﾗﾝﾄﾞｸﾛｽよ!(みんな並んで!)",
-                        "comments_work_4": "我が友OOよ｡聖杯に願いを(一緒にﾄｯﾌﾟ目指そ!)",
-                        "comments_work_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ……私たち､良いﾊﾟｰﾄﾅｰ…ですよね!",
-                        "comments_work_love_up": "OOﾌﾟ…ﾌﾟﾛﾃﾞｭｰｻｰ……本当に…ありがとう(言えた!)",
-                        "comments_live": "いざゆかん! 共に奏でよ!",
-                        "comments_love_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ｡あの…私､あなたの期待に応えられているかわからないけど…これからも精一杯頑張ります!"
+                        "comment": "나의 재능을 알아본 [눈]을 가진 자여! 그 마력을 어둠의 그릇에 쏟아부어, 위대한 암흑의 힘을 하나로 만들라! 후후후, 아하하하하하! (프로듀서 덕분에 저도 성장할 수 있었습니다! 정말 기뻐요!)",
+                        "comments_my_1": "금기를 건드리지 마라! (비밀이에요!)",
+                        "comments_my_2": "무슨 일이지? (용무가 있으신가요?)",
+                        "comments_my_3": "나의 반신들이여! (의상이 모두 준비됐다!)",
+                        "comments_my_4": "나의 벗 OO. 영혼의 휴식을! (너무 무리하지 말아주세요?)",
+                        "comments_my_max": "OO 프로듀서...... 앞으로도, 저기, 신세지겠습니다!",
+                        "comments_work_1": "어둠에 삼켜져라! (수고하셨습니다!)",
+                        "comments_work_2": "심연을 부르는 소리! (성원 기뻐!)",
+                        "comments_work_3": "그랜드 크로스! (모두 나란히 서서!)",
+                        "comments_work_4": "나의 벗 OO여. 성배에 소원을 (함께 톱을 노리자!)",
+                        "comments_work_max": "OO 프로듀서...... 저희들, 좋은 파트너...네요!",
+                        "comments_work_love_up": "OO 프... 프로듀서...... 정말로... 고마워 (말했다!)",
+                        "comments_live": "자 간다! 같이 연주하라!",
+                        "comments_love_max": "OO프로듀서. 저기... 제가, 당신의 기대에 부응하고 있는지는 모르겠지만... 앞으로도 열심히 노력할게요!"
                     },
                     "voice": {
                         "comment": null,
@@ -1411,20 +1411,20 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "祝祭に相応しき舞台は真紅の月を裂く漆黒の尖塔! 生贄が足りぬ､と? 悪魔との契約が必要か…｡ (訳:私､こういうｽﾃｰｼﾞと衣装で歌いたいんです! …ﾀﾞﾒなんですか? 予算? どうして!?)",
-                        "comments_my_1": "魂の波動が!(ﾋﾟﾝときました!)",
-                        "comments_my_2": "禁忌の姿!(悪い子になるの!)",
-                        "comments_my_3": "生贄…(お手伝い増やそうかな)",
-                        "comments_my_4": "ばかばか! もぉしらない! (紅蓮の炎に焼かれよ!) …はっ",
-                        "comments_my_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ､私のお小遣いじゃ…足りませんか?",
-                        "comments_work_1": "闇に飲まれよ!(お疲れ様です!)",
-                        "comments_work_2": "魔力が足りぬ!(お腹すいた…)",
-                        "comments_work_3": "ｸﾞﾘﾓﾜｰﾙを見よ!(絵､描いたの!)",
-                        "comments_work_4": "嗚呼…渇き､飢えに喘ぐというのか! (予算ｵｰﾊﾞｰ!? ｼｮｯｸ…!)",
-                        "comments_work_max": "OOﾌﾟﾛﾃﾞｭｰｻｰなら､お､お願い聞いてくれるかなって",
-                        "comments_work_love_up": "禁断の力を授けん!(お小遣い増やしてもらったから…使って?)",
-                        "comments_live": "我が願い…叶えん!",
-                        "comments_love_max": "あの､OOﾌﾟﾛﾃﾞｭｰｻｰ､私､悪い子じゃなくっていい子になるから…素敵なｽﾃｰｼﾞで､歌わせてほしいの! ﾀﾞﾒ…ですか?"
+                        "comment": "축제에 상응하는 무대는 진홍의 달을 가르는 칠흑의 첨탑! 산제물이 부족하다, 고? 악마와의 계약이 필요한가… (역 : 저, 이런 스테이지랑 의상으로 노래하고 싶어요!… 안되나요? 예산? 어째서!?)",
+                        "comments_my_1": "영혼의 파동이! (핑하고 왔어요!)",
+                        "comments_my_2": "금기의 형태! (나쁜 아이가 될거야!)",
+                        "comments_my_3": "산 제물… (심부름 늘릴까나)",
+                        "comments_my_4": "바보바보! 이젠 몰라! (홍련의 불꽃에 불타라!) …핫",
+                        "comments_my_max": "OO프로듀서, 저의 용돈으로는… 모자란가요?",
+                        "comments_work_1": "어둠에 삼켜져라! (수고하셨습니다!)",
+                        "comments_work_2": "마력이 부족하다! (배고파…)",
+                        "comments_work_3": "그리모와르를 보라! (그림, 그렸어!)",
+                        "comments_work_4": "아아…갈증, 굶주림에 괴로워한단 말인가! (예산오버-!? 쇼크…!)",
+                        "comments_work_max": "OO프로듀서라면, 부, 부탁 들어줄까나 하고",
+                        "comments_work_love_up": "금단의 힘을 내리리라! (용돈 늘려줬으니까… 써줘?)",
+                        "comments_live": "나의 소원… 이뤄져라!",
+                        "comments_love_max": "저기, OO프로듀서, 저, 나쁜 아이가 아니라 착한 아이가 될테니까… 근사한 무대에서 노래하게 해줬으면 좋겠어요! 안될…까요?"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2406401/idolcomment.mp3",
@@ -1490,20 +1490,20 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "皆､聴くがいい! 地獄の祭壇が奏でる交響曲を! ﾌﾊﾊﾊﾊ! 堕天使は契約の召喚陣にて真の魔王に覚醒する! (訳:わ～い! これ､私がﾃﾞｻﾞｲﾝした衣装ですよね! すっごく素敵です!)",
-                        "comments_my_1": "魂の波動が!(ﾋﾟﾝときました!)",
-                        "comments_my_2": "禁忌の姿!(悪い子になるの!)",
-                        "comments_my_3": "ﾋｯ…ｺｳﾓﾘか(ﾎﾗｰは苦手なの…)",
-                        "comments_my_4": "代償で…我が友へ祝福を…(お小遣いでﾌﾟﾚｾﾞﾝﾄあげようかな)",
-                        "comments_my_max": "ﾜｶﾞﾏﾏ聞いてくれたから､次はOOﾌﾟﾛﾃﾞｭｰｻｰの番…",
-                        "comments_work_1": "闇に飲まれよ!(お疲れ様です!)",
-                        "comments_work_2": "魔力が足りぬ!(お腹すいた…)",
-                        "comments_work_3": "魔界の頂点へ!(ﾄｯﾌﾟ目指そ!)",
-                        "comments_work_4": "感じるか…漲る魔力を! (このお仕事､とっても楽しいな!)",
-                        "comments_work_max": "私､OOﾌﾟﾛﾃﾞｭｰｻｰと一番になりたいなって思って…",
-                        "comments_work_love_up": "OOﾌﾟﾛﾃﾞｭｰｻｰ､私のお願い聞いてくれて…嬉しいです",
-                        "comments_live": "黒き翼に舞え!",
-                        "comments_love_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ､いつも私の夢を叶えてくれてありがとう…｡いつか､私の力であなたの夢を叶えてみせるから…!"
+                        "comment": "모두, 듣는게 좋다! 지옥의 제단이 연주하는 교향곡을! 흐하하하하! 타천사와 계약의 소환진에서 진정한 마왕으로 각성한다! (역 : 와~이! 이거, 제가 디자인한 의상이네요! 정말 멋져요!))",
+                        "comments_my_1": "영혼의 파동이! (핑하고 왔어요!)",
+                        "comments_my_2": "금기의 형태! (나쁜 아이가 될거야!)",
+                        "comments_my_3": "힉…박쥐인가(호러는 질색이야…)",
+                        "comments_my_4": "대가로…나의 벗에게 축복을…(용돈으로 선물이라도 사줄까나)",
+                        "comments_my_max": "내 제멋대로를 들어줬으니까, 다음은 OO프로듀서의 차례…",
+                        "comments_work_1": "어둠에 삼켜져라! (수고하셨습니다!)",
+                        "comments_work_2": "마력이 부족하다! (배고파…)",
+                        "comments_work_3": "마계의 정점으로! (TOP노리자!)",
+                        "comments_work_4": "느껴지는가… 넘쳐 흐르는 마력이! ( 이번 일, 굉장히 즐거워!)",
+                        "comments_work_max": "나, OO프로듀서랑 일등이 됐으면 좋겠다고 생각해서…",
+                        "comments_work_love_up": "OO프로듀서, 나의 부탁 들어줘서…기뻐요",
+                        "comments_live": "검은 날개에 흩날려라!",
+                        "comments_love_max": "OO프로듀서, 언제나 제 꿈을 이뤄줘서 고마워요… 언젠가, 저의 힘으로 당신의 꿈을 이뤄줄테니까…!"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2506402/idolcomment.mp3",
