--- a/idol_gallery/idol_detail/ranko_k.html
+++ b/idol_gallery/idol_detail/ranko_k.html
@@ -937,7 +937,7 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "きゃぁっ! み､見ないでっ…!! ……うぅ､恥ずかしい｡……………ｸ､ｸｸｸ｡こ､この私の心結界を破るとはｱﾅﾀの力もなかなかのようね……ﾌﾌ､ﾊﾊﾊﾊ!(訳:絵見られちゃったかなぁ､どうしよう～)",
+                        "comment": "꺄앗! 보, 보지 마앗…!! …… 우으, 부끄러워. …………… 크, 크크크. 이, 이 내 마음의 결계를 깨트리다니 당신의 힘도 제법이군……후후, 하하하하! (역 : 그림 봐버렸으려나, 어쩌지～)",
                         "comments_my_1": "성가신 태양이네 (안녕!)",
                         "comments_my_2": "자아 사냥의 시간이다 (일하러 가자?)",
                         "comments_my_3": "크크크, 밤의 시작이군 (힘내～♪)",
