--- a/idol_gallery/idol_detail/ranko_k.html
+++ b/idol_gallery/idol_detail/ranko_k.html
@@ -4123,7 +4123,7 @@ kg
                     }
                 }, {
                     "story_id": "397",
-                    "story_title": "愛を紡ぐ 蘭子と幸子のバレンタイン",
+                    "story_title": "사랑을 자아내는 란코와 사치코의 발렌타인",
                     "voice_enable": {
                         "0": "1",
                         "2": "1"
