--- a/idol_gallery/idol_detail/ranko_k.html
+++ b/idol_gallery/idol_detail/ranko_k.html
@@ -4150,7 +4150,7 @@ kg
                     }
                 }, {
                     "story_id": "361",
-                    "story_title": "彷徨の祈姫",
+                    "story_title": "방황하는 기도하는 공주",
                     "voice_enable": ["1", "1"],
                     "flash_path": ["../../idol_story/movie_play/361/1_k.html", 
                                    "../../idol_story/movie_play/361/2_k.html"],
@@ -4163,7 +4163,7 @@ kg
                                          "../../image_sp/ui/episode/epi_button_moviename_cool_late.png"]
                 }, {
                     "story_id": "199",
-                    "story_title": "ミラクル☆スポーツフェスタ",
+                    "story_title": "미라클☆스포츠 페스타",
                     "voice_enable": {
                         "0": "1",
                         "3": "1"
