--- a/idol_gallery/idol_detail/ranko_k.html
+++ b/idol_gallery/idol_detail/ranko_k.html
@@ -1569,20 +1569,20 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "あ…OOﾌﾟﾛﾃﾞｭｰｻｰ｡も､もう少し､待っててね｡お､お礼に料理ごちそうするって決めたのは､わ､私だから｡あとは…ｳｲﾝﾅｰ､ﾀｺさん｡えっと､包丁を使うときの手は猫の手､こう…?",
-                        "comments_my_1": "新たな衣!(似合いますか…?)",
-                        "comments_my_2": "時が刻む!(もすこし､待って?)",
-                        "comments_my_3": "お料理は､ﾏﾏのお手伝いとか…",
-                        "comments_my_4": "巻かれし闇のｳﾞｪｰﾙは…封印…(ｲｶｽﾐﾊﾟｽﾀは､ま…また今度ね!)",
-                        "comments_my_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ､私の料理､お口にあうといいな…!",
-                        "comments_work_1": "変身ｰ(お着替えお着替え)",
-                        "comments_work_2": "白馬で迎えて?(一緒に行こ?)",
-                        "comments_work_3": "やみにのまれ…にゃん?",
-                        "comments_work_4": "宴の時は近いわ! (もう少しだから､楽しみに待っててね!)",
-                        "comments_work_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ､よかったらまた料理作ってあげる!",
-                        "comments_work_love_up": "OOﾌﾟﾛﾃﾞｭｰｻｰ､苦手な食べ物とか､なかったかな…?",
-                        "comments_live": "あ､今行きまｰ…LIVE?!",
-                        "comments_love_max": "OOﾌﾟﾛﾃﾞｭｰｻｰへの感謝を伝える方法､考えたけど､料理くらいしかなくて…下手だけど､喜んでくれたら嬉しいです!"
+                        "comment": "아…OO프로듀서. 조, 조금만 더, 기다려 주세요. 다, 답례로 요리를 해드리기로 결정한 건, 저, 저였으니까. 다음은… 비엔나, 문어씨. 으음, 식칼을 쓸 때 손은 고양이손처럼, 이렇게…?",
+                        "comments_my_1": "새로운 의복! (어울리나요…?)",
+                        "comments_my_2": "시간이 새겨진다! (조금만 더, 기다려 줘?)",
+                        "comments_my_3": "요리는, 엄마의 도움이라든지…",
+                        "comments_my_4": "휘감긴 어둠의 베일은…봉인…(먹물파스타는, 다 … 다음에!)",
+                        "comments_my_max": "OO프로듀서, 내 요리, 입맛에 맞았으면 좋겠다…!",
+                        "comments_work_1": "변신-(갈아입기 갈아입기)",
+                        "comments_work_2": "백마로 맞이하는가? (같이 가자?)",
+                        "comments_work_3": "어둠에 삼켜져…냥?",
+                        "comments_work_4": "연회의 때가 머지 않았다! (얼마 안 남았으니, 기대하면서 기다려줘!)",
+                        "comments_work_max": "OO프로듀서, 괜찮다면 또 요리 만들어 줄게요!",
+                        "comments_work_love_up": "OO프로듀서, 싫어하는 음식이라든가, 없었던가…?",
+                        "comments_live": "아, 지금 갑니-…LIVE?!",
+                        "comments_love_max": "OO프로듀서에게 감사를 전할 방법, 생각해봐도, 요리정도밖에 없어서… 서투르지만, 기뻐해주셨으면 좋겠어요!"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2407301/idolcomment.mp3",
@@ -1648,20 +1648,20 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "我が友より授かりし､純白の衣よ! 願いを叶えし灰被り姫が､今…此処に舞いおりる…! (訳:ﾌﾟﾛﾃﾞｭｰｻｰに着せてもらったこのﾄﾞﾚｽ､嬉しいです! ｼﾝﾃﾞﾚﾗになれて､とっても嬉しいな!)",
-                        "comments_my_1": "新たな衣!(似合いますか…?)",
-                        "comments_my_2": "時が刻む!(もすこし､待って?)",
-                        "comments_my_3": "魔法をかけるの! 私と､皆にも!",
-                        "comments_my_4": "OOﾌﾟﾛﾃﾞｭｰｻｰがかけてくれた魔法､嬉しいな…!",
-                        "comments_my_max": "ｶﾞﾗｽの靴をくれた貴方へ､あ､あなたへ…あの…ありがとう…!",
-                        "comments_work_1": "変身ｰ(お着替えお着替え)",
-                        "comments_work_2": "白馬で迎えて?(一緒に行こ?)",
-                        "comments_work_3": "長針が迫るわ! (一緒に帰ろ?)",
-                        "comments_work_4": "魂の輝く色を見せるわ! (私､いまとってもｱｲﾄﾞﾙ楽しいっ!)",
-                        "comments_work_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ､私…あなたに恩返し､出来たかな!",
-                        "comments_work_love_up": "私､OOﾌﾟﾛﾃﾞｭｰｻｰの夢を叶えてあげたかったの…!",
-                        "comments_live": "我が名は魔法少女蘭子!",
-                        "comments_love_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ､私の力であなたの夢は叶えられたかな…? もっともっと大きな夢を､これからも一緒に見たいです…!"
+                        "comment": "나의 벗으로부터 받은, 순백의 의복! 소원을 이룬 신데렐라가, 지금… 이곳에 내려 앉았다…!(역: 프로듀서가 입혀준 이 드레스, 기뻐요! 신데렐라가 되어서, 매우 기뻐!)",
+                        "comments_my_1": "새로운 의복! (어울리나요…?)",
+                        "comments_my_2": "시간이 새겨진다! (조금만 더, 기다려 줘?)",
+                        "comments_my_3": "마법을 걸겠다! 나와, 모두에게!",
+                        "comments_my_4": "OO프로듀서가 걸어준 마법, 기뻐…!",
+                        "comments_my_max": "유리구두를 준 당신에게, 다, 당신에게… 저… 고마워요…!",
+                        "comments_work_1": "변신-(갈아입기 갈아입기)",
+                        "comments_work_2": "백마로 맞이하는가? (같이 가자?)",
+                        "comments_work_3": "시계 바늘이 다가오고 있다! (같이 돌아가자?)",
+                        "comments_work_4": "영혼의 빛나는 색을 보여주겠다! (나, 지금 아이돌 엄청 즐거워!)",
+                        "comments_work_max": "OO프로듀서, 나… 당신에게 보답, 되었을까?",
+                        "comments_work_love_up": "저, OO프로듀서의 꿈을 이뤄주고 싶었어요…!",
+                        "comments_live": "나의 이름은 마법소녀 란코!",
+                        "comments_love_max": "OO프로듀서, 내 힘으로 당신의 꿈은 이룰 수 있었던 걸까…? 더 더 커다란 꿈을, 앞으로도 함께 보고 싶어요…!"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2507302/idolcomment.mp3",
@@ -1727,20 +1727,20 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "新しい服に身を通すと､新しい私になったかのよう｡我が友OO､私はもう一度…生まれ変わるわ! 魂の輝く､新たな形態に再誕するの! 本当の姿は､貴方だけが知っていて…!",
-                        "comments_my_1": "祝杯を掲げよ!(かんぱ～い!)",
-                        "comments_my_2": "魔力を満たすわ!(ごｰはん!)",
-                        "comments_my_3": "白の衣…!(新しいお洋服～♪)",
-                        "comments_my_4": "我が友OOよ､貴方も祝祭にふさわしい装いに…",
-                        "comments_my_max": "我が友OOと永久の絆を結ぶわ! さらなる高みへ!",
-                        "comments_work_1": "闇に飲まれよ!(お疲れ様です!)",
-                        "comments_work_2": "宴を祝おうぞ!(おめでと～!)",
-                        "comments_work_3": "ｸｸｸ…この程度､造作もないわ",
-                        "comments_work_4": "魂の鼓動はきっと伝わるわ!(みんなに聞いてもらいたいな!)",
-                        "comments_work_max": "我が友OO､ともに､永遠の夢をみましょう…!",
-                        "comments_work_love_up": "我が友OO､私の手をとって? ｴｽｺｰﾄを…お願いっ!",
-                        "comments_live": "再誕の時は…今!",
-                        "comments_love_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ…その…たまにはこうして､本当の私のことばを聞いてくれたら…嬉しいな｡ふふっ､闇に飲まれよ♪"
+                        "comment": "새로운 옷으로 갈아 입으니, 새로운 내가 된 것 같아. 나의 벗 OO여, 나는 다시 한 번… 다시 태어났다! 영혼이 빛나는 새로운 형태로 재탄생한거야! 진정한 모습은 당신만 알고 있어…!",
+                        "comments_my_1": "축배를 들어라!(건~배!)",
+                        "comments_my_2": "마력을 채우겠다! (밥-!)",
+                        "comments_my_3": "흰색의 의복…! (새로운 양복～♪)",
+                        "comments_my_4": "나의 벗 OO여, 당신도 축제에 어울리는 옷차림으로…",
+                        "comments_my_max": "나의 벗 OO과 영원의 인연을 맺겠다! 한층 더 높은 곳으로!",
+                        "comments_work_1": "어둠에 삼켜져라! (수고하셨습니다!)",
+                        "comments_work_2": "연회를 축하하자! ( 축하해요~!)",
+                        "comments_work_3": "크크크…이 정도, 대수롭지도 않다",
+                        "comments_work_4": "영혼의 고동은 반드시 전해질 것이다! (모두가 들어줬으면 좋겠어!)",
+                        "comments_work_max": "나의 벗 OO이여, 함께, 영원한 꿈을 꾸자…!",
+                        "comments_work_love_up": "나의 벗 OO여, 나의 손을 잡아 줄래? 에스코트를… 부탁해!",
+                        "comments_live": "재탄생의 때는… 지금!",
+                        "comments_love_max": "OO프로듀서…저기…가끔은 이렇게, 진정한 나의 말을 들어주면… 기쁘겠어. 후훗, 어둠에 삼켜져라♪"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2410801/idolcomment.mp3",
@@ -1812,20 +1812,20 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "ｸｯｸｯｸ…! 祝祭に集いし我が下僕たちよ! 私の前にひれ伏して! 跪くのだ! この宴､ともに命の炎を燃やし尽くすまで､歌い上げよう! (訳:みんなありがとｰ! LIVEって楽しいなｰ!)",
-                        "comments_my_1": "祝杯を掲げよ!(かんぱ～い!)",
-                        "comments_my_2": "魔力を満たすわ!(ごｰはん!)",
-                        "comments_my_3": "魔力を感じる!(がんばれそう!)",
-                        "comments_my_4": "貴方からは蒼の力を感じるわ…(凛ちゃん蒼色､好きなの～?)",
-                        "comments_my_max": "魂の導きは必然よ!(ﾌﾟﾛﾃﾞｭｰｻｰと出会えてよかったなぁ～)",
-                        "comments_work_1": "闇に飲まれよ!(お疲れ様です!)",
-                        "comments_work_2": "宴を祝おうぞ!(おめでと～!)",
-                        "comments_work_3": "ﾌﾊﾊﾊ! これが新たなる私よ!",
-                        "comments_work_4": "手と手を重ねて…もっと…もっと魔力を!(みんなでLIVE～♪)",
-                        "comments_work_max": "一人では唱えられない魔法も､ﾌﾟﾛﾃﾞｭｰｻｰと一緒なら…!",
-                        "comments_work_love_up": "我が友OOに言の葉は届いたか?(ねｰねｰ聞いてた?)",
-                        "comments_live": "ひれ伏しなさい!",
-                        "comments_love_max": "我が友､いえ､OOﾌﾟﾛﾃﾞｭｰｻｰ｡心の声を､聞き取ってくれてありがとう｡貴方の心の声も､私には聞こえているからね…!"
+                        "comment": "큭큭큭…! 축제에 모여든 나의 하인들이여! 나의 앞에 부복하라! 무릎 꿇으라! 이 연회, 함께 생명의 불꽃이 모조리 탈 때까지, 끝까지 노래하라!",
+                        "comments_my_1": "축배를 들어라!(건~배!)",
+                        "comments_my_2": "마력을 채우겠다! (밥-!)",
+                        "comments_my_3": "마력이 느껴진다! (힘낼 수 있을 것 같아!)",
+                        "comments_my_4": "당신에게서는 청색의 힘이 느껴지네…(린짱 파란색, 좋아해～?)",
+                        "comments_my_max": "영혼의 인도는 필연! (프로듀서랑 만나서 다행이야～)",
+                        "comments_work_1": "어둠에 삼켜져라! (수고하셨습니다!)",
+                        "comments_work_2": "연회를 축하하자! (축하해요～!)",
+                        "comments_work_3": "흐하하하! 이것이 새로워진 나야!",
+                        "comments_work_4": "손과 손을 쌓아 올려… 더… 더욱 마력을! (모두 같이 LIVE～♪)",
+                        "comments_work_max": "혼자서는 쓸 수 없는 마법도, 프로듀서랑 함께라면…!",
+                        "comments_work_love_up": "나의 벗 OO에게 말은 도달했는가? (저기- 저기- 듣고 있어?)",
+                        "comments_live": "부복하라!",
+                        "comments_love_max": "나의 벗, 아니, OO프로듀서. 마음속 소리를, 들어줘서 고마워. 당신의 마음속 소리도, 나한테는 들리고 있으니까…!"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2510802/idolcomment.mp3",
